refactor base root directory structure

--- a/linux-files/hook-server.service
+++ b/linux-files/hook-server.service
@@ -3,15 +3,13 @@ Description=GitHub webhooks listener
 After=network.target
 
 [Service]
-Environment=USER=%u
-ExecStart=/bin/sh -c "/home/$USER/hook-server/build/app.js"
-Restart=always
-User=ubuntu
-# Note Debian/Ubuntu uses 'nogroup', RHEL/Fedora uses 'nobody'
-Group=nogroup
+User=ubuntu # This has to be your actual user name
+
 Environment=PATH=/usr/bin:/usr/local/bin
 Environment=NODE_ENV=production
 WorkingDirectory=/home/ubuntu/hook-server
+Restart=always
 
+ExecStart=/bin/sh -c "/opt/hook-server/build/app.js"
 [Install]
 WantedBy=multi-user.target
